--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ body {
 .navbar-principal {
 
     background-color: black;
+  
+
 }
 
 .text-nav {
@@ -28,18 +30,20 @@ body {
 
 
 }
+.navbar-nav .nav-link:hover {
+    color: white;
+    border: 1px solid white;
+    border-radius: 5px; 
+  }
 
 .nav-carta {
-    color: #ffffff;
+    color: black;
     font-size: 20px;
     display: flex;
     justify-content: space-around;
     font-weight: bold;
 
-
 }
-
-
 
 .card-dish {
     object-fit: cover;
@@ -80,9 +84,6 @@ h5 {
     /* Color del texto */
 }
 
-
-
-/* CSS HOME */
 .card-text-home {
     color: #ffffff;
 }
