--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,8 @@ body {
     display: flex;
     justify-content: space-around;
     font-weight: bold;
-
 }
+
 
 .card-dish {
     object-fit: cover;
@@ -75,6 +75,7 @@ body {
 
 h5 {
     font-size: 20px;
+    color: #ffffff;
 }
 
 .hundred-color {
@@ -86,4 +87,9 @@ h5 {
 
 .card-text-home {
     color: #ffffff;
+}
+
+.form-label{
+    font-size: 20px;
+    font-weight: bold;
 }
