--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-
     background-color: black;
 }
 
@@ -9,7 +8,9 @@ body {
 .navbar-principal {
 
     background-color: black;
-  
+    display: flex;
+    justify-content: flex-start;
+
 
 }
 
@@ -93,3 +94,6 @@ h5 {
     font-size: 20px;
     font-weight: bold;
 }
+a {
+    text-decoration: none;
+  }
